[tool.poetry]
name = "cipher"
version = "0.1.0"
description = ""
authors = ["Daniel <mrramzes37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.2"
pydantic-argparse = "^0.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
